prevents images from exceeding allowed space on mobile

--- a/src/less/components.less
+++ b/src/less/components.less
@@ -46,7 +46,7 @@
 
 #email_joke {
     margin: 0 auto;
-    
+
     p {
         color: #FF0;
         padding: 0 0.5rem;
@@ -194,6 +194,7 @@
 
     img, [data-sprite] {
         margin: 0 auto;
+        max-width: 100%
     }
 }
 .with_border {
